mesa (20.1.0~rc1-1) UNRELEASED; urgency=medium

  * New upstream snapshot.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 05 May 2020 11:56:20 +0300

mesa (20.0.6-1) unstable; urgency=medium

  * New upstream release.
  * patches: Drop upstreamed patches, refresh llvm-10 build-fix.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 05 May 2020 10:37:18 +0300

mesa (20.0.4-2) unstable; urgency=medium

  * fix-build-with-llvm-10.diff: Add a patch to fix build with Polly,
    and build with llvm-10 again. (Closes: #956004)
  * iris-drop-cache-coherent-cpu-mapping.diff: Fix corruption with iris
    (Closes: #954311) (LP: #1864274)
  * gallium-fix-bob-compute-shaders.diff: Fix vaapi with bob
    deinterlacing. (LP: #1867188)

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 15 Apr 2020 10:16:24 +0300

mesa (20.0.4-1) unstable; urgency=medium

  * New upstream release.
  * path_max.diff, libglx-mesa0.symbols.hurd: Fix build on Hurd.
    (Closes: #955351)
  * upstream/signing-key.asc: Added Eric Engestrom's key.
  * source/local-options: Update extend-diff-ignore.

 -- Timo Aaltonen <tjaalton@debian.org>  Sun, 05 Apr 2020 23:39:55 +0300

mesa (20.0.2-1) unstable; urgency=medium

  * New upstream release.
  * control: Revert to building with llvm/clang-9, until it builds with
    10.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 19 Mar 2020 16:03:53 +0200

mesa (20.0.1-2) experimental; urgency=medium

  * control: Fix clang build-dep to actually use libclang-10-dev.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 09 Mar 2020 23:20:30 +0200

mesa (20.0.1-1) experimental; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 09 Mar 2020 17:40:08 +0200

mesa (20.0.0-1) experimental; urgency=medium

  * New upstream release.
  * control: Use debhelper-compat, bump to 12.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 20 Feb 2020 10:46:06 +0200

mesa (20.0.0~rc3-1) experimental; urgency=medium

  * New upstream release candidate.