@@ -1,6 +1,7 @@
 mesa (20.1.0~rc1-1) UNRELEASED; urgency=medium
 
   * New upstream snapshot.
+  * fix-build-with-llvm-10.diff: Refreshed.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Tue, 05 May 2020 11:56:20 +0300
 
